--- a/whatsapp-backend/package.json
+++ b/whatsapp-backend/package.json
@@ -6,12 +6,16 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "npx nodemon server.js"
   },
   "author": "Kevin Lin",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.10.3"
+    "mongoose": "^5.10.3",
+    "pusher": "^3.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
